inventory/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory
spec:
  ports:
    - name: http
      port: 4200
