inventory/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory
  annotations:
    cert-manager.io/renew-before: 360h
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/subnets: 'subnet-0c7a14c196e761d76,subnet-0173c073e1d31d7a9,subnet-08968acd8ab666264,subnet-065ff620d37991767,subnet-0d849c7747024f078'
  finalizers:
    - ingress.k8s.aws/resources
spec:
  ingressClassName: alb
  rules:
    - host: inventory.saamsksa.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inventory
                port:
                  number: 4200
  tls:
    - secretName: saamsapp-tls
      hosts:
        - inventory.saamsksa.com
